--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Notes App - Enggar</title>
 
   <!-- Own Styles -->
-  <!-- <link rel="stylesheet" href="/src/styles/style.css" /> -->
+  <link rel="stylesheet" href="/src/styles/style.css" />
 
   <!-- Favicons -->
   <!-- <link rel="icon" href="" /> -->
