update notes.js, home.js, and index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div id="noteListContainer" class="note-list-container">
           <div class="placeholder query-waiting">Waiting for search keyword</div>
           <div class="placeholder search-loading">Loading</div>
+          <div class="placeholder not-found">Data tidak ditemukan</div>
 
           <note-list></note-list>
         </div>
