--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div id="noteListContainer" class="note-list-container">
           <div class="placeholder search-loading">Loading</div>
-          <div class="placeholder not-found">Data tidak ditemukan</div>
+          <div class="placeholder not-found hidden">Data tidak ditemukan</div>
 
           <note-list></note-list>
         </div>
