--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <search-bar></search-bar>
         </div>
 
-        <div class="title-section">
+        <div id="titleSection" class="title-section">
           <h2>Notes List</h2>
         </div>
 
