--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <search-bar></search-bar>
         </div>
 
+        <button id="addNoteBtn">+ New Note</button>
+
         <div id="titleSection" class="title-section">
           <h2>Notes List</h2>
         </div>
