--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
         </div>
 
         <div id="titleSection" class="title-section">
+          <button id="addNoteBtn">
+            <span class="icon">+</span>
+            New Note
+          </button>
           <h2>Notes List</h2>
-          <button id="addNoteBtn">+ New Note</button>
         </div>
 
         <div id="noteListContainer" class="note-list-container">
           <div class="placeholder search-loading">Loading</div>
-          <div class="placeholder not-found" hidden>Data tidak ditemukan</div>
+          <div class="placeholder not-found" hidden>Data not found</div>
 
           <note-list></note-list>
         </div>
