add note filter

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
         <div id="titleSection" class="title-section">
           <h2>Notes List</h2>
+          
+          <note-filter></note-filter>
+
           <button id="addNoteBtn">
             <span class="icon">+</span>
             New Note
