--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="searchBarContainer" class="search-bar-container">
           <search-bar></search-bar>
         </div>
-
+        <loading-indicator></loading-indicator>
         <div id="titleSection" class="title-section">
           <h2>Notes List</h2>
           <button id="addNoteBtn">
