--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <search-bar></search-bar>
         </div>
         
+        <loading-indicator></loading-indicator>
+
         <div id="titleSection" class="title-section">
           <h2>Notes List</h2>
           <button id="addNoteBtn">
