--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
         <div id="noteListContainer" class="note-list-container">
           
-          <div class="placeholder not-found" hidden>Data not found</div>
+          <div class="placeholder not-found" style="display:none;"></div>
 
-          <note-list></note-list>
+          <note-list column="2" gutter="16"></note-list>
         </div>
       </section>
     </div>
