--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div id="noteListContainer" class="note-list-container">
           
-          <div class="placeholder not-found">Data not Found</div>
+          <div class="placeholder not-found" style="display: none;">Data not Found</div>
 
           <note-list column="2" gutter="16"></note-list>
         </div>
